Fix[Update Global Font to Roboto]: update config font (navbar, buton and textInput)

--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,14 @@
-@import "tailwindcss";
+@import 'tailwindcss';
+
+@config '../tailwind.config.js';
 
 @theme {
-  --color-brand: #0ea5e9;
-  --color-brand-dark: #0369a1;
+    --font-sans: "Roboto", sans-serif;
+  
+    --color-brand: #0ea5e9;
+    --color-brand-dark: #0369a1;
+  }
+
+html {
+  font-family: var(--font-sans);
 }
